ref #94: Começado a corrigir as mensagens.

--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -179,6 +179,9 @@
   }
 }
 #messages-container {
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 400px;
   .msg {
     font-weight: bold;
     font-family: $font-sans;
