--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -276,8 +276,7 @@
     .grupo-title {
       line-height: $line-height;
     }
-    input[type=text],
-    input[type=number] {
+    input[type=text] {
       color: $color-text-box;
       margin-left: 0;
       padding-left: 0;
