--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -36,6 +36,7 @@
     padding: 0 30px;
   }
 }
+
 .table-like {
   color: $color-blue;
   .header {
@@ -70,6 +71,59 @@
   .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6,
   .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
     padding: 0 5px;
+  }
+}
+.bonus {
+  .place {
+    > .row.active {
+      border: 1px solid #cccccc;
+      border-top: none;
+      &:nth-child(1) {
+        border-top: 1px solid #cccccc;
+      }
+    }
+    .active .bag {
+      display: block;
+    }
+    .bag {
+      clear: both;
+      display: none;
+      .details {
+        font-size: 13px;
+        margin: 10px 10px;
+        color: $color-blue;
+        line-height: 30px;
+        padding: 10px;
+
+        b {
+          font-weight: bold;
+        }
+      }
+    }
+    i.fa-2x {
+      line-height: 40px;
+      cursor: pointer;
+    }
+    .button {
+      line-height: 40px;
+      min-height: 40px;
+      padding: 5px 0;
+      .btn {
+        background: $color-green;
+        border-radius: 6px;
+        border: none;
+        color: $color-white;
+        font-family: $font-sans;
+        font-size: 13px;
+        font-weight: bold;
+        height: 30px;
+        line-height: 30px;
+        padding: 0 15px;
+        &:hover {
+          background-color: $color-green-hover;
+        }
+      }
+    }
   }
 }
 .history {
