--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -601,6 +601,72 @@
       .profile .profile-content form .icons img {
         width: auto;
         height: 40px; }
+    .profile .profile-content form .choice {
+      display: block;
+      position: relative; }
+      .profile .profile-content form .choice input[type=number],
+      .profile .profile-content form .choice input[type=text] {
+        height: 25px;
+        width: 50px;
+        text-align: right;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+        line-height: 21px;
+        padding: 0 10px;
+        -moz-appearance: textfield; }
+        .profile .profile-content form .choice input[type=number]::-webkit-outer-spin-button, .profile .profile-content form .choice input[type=number]::-webkit-inner-spin-button,
+        .profile .profile-content form .choice input[type=text]::-webkit-outer-spin-button,
+        .profile .profile-content form .choice input[type=text]::-webkit-inner-spin-button {
+          -ms-progress-appearance: unset !important;
+          -webkit-appearance: none !important;
+          -moz-appearance: none !important;
+          margin: 0; }
+      .profile .profile-content form .choice input[type=radio] {
+        position: absolute;
+        visibility: hidden; }
+        .profile .profile-content form .choice input[type=radio]:checked ~ .check {
+          border: 2px solid #4a7fb3; }
+        .profile .profile-content form .choice input[type=radio]:checked ~ .check::before {
+          background: #4a7fb3; }
+        .profile .profile-content form .choice input[type=radio]:checked ~ label {
+          color: #4a7fb3;
+          font-weight: bold; }
+      .profile .profile-content form .choice label {
+        -webkit-transition: all 0.25s linear;
+        cursor: pointer;
+        display: block;
+        height: 25px;
+        line-height: 25px;
+        padding-left: 22px;
+        position: relative;
+        z-index: 9;
+        color: #999999; }
+      .profile .profile-content form .choice .check {
+        display: block;
+        position: absolute;
+        border: 2px solid #999999;
+        border-radius: 100%;
+        height: 15px;
+        width: 15px;
+        top: 5px;
+        left: 0;
+        z-index: 5;
+        transition: border .25s linear;
+        -webkit-transition: border .25s linear; }
+        .profile .profile-content form .choice .check::before {
+          display: block;
+          position: absolute;
+          content: '';
+          border-radius: 100%;
+          height: 7px;
+          width: 7px;
+          top: 2px;
+          left: 2px;
+          margin: auto;
+          transition: background 0.25s linear;
+          -webkit-transition: background 0.25s linear; }
+    .profile .profile-content form:hover .check {
+      border: 2px solid #b3b3b3; }
     .profile .profile-content .deposit .amount label,
     .profile .profile-content .deposit .icons label {
       color: #999999; }
