--- a/resources/assets/sass/profile/_form.scss
+++ b/resources/assets/sass/profile/_form.scss
@@ -1,3 +1,5 @@
+@import "../global/variables";
+
 form {
   label {
     font-weight: normal;
@@ -104,5 +106,89 @@ form {
       width: auto;
       height: 40px;
     }
+  }
+
+  .choice {
+    display: block;
+    position: relative;
+    input[type=number],
+    input[type=text] {
+      height: 25px;
+      width: 50px;
+      text-align: right;
+
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      line-height: 21px;
+      padding: 0 10px;
+
+      -moz-appearance: textfield;
+
+      &::-webkit-outer-spin-button,
+      &::-webkit-inner-spin-button {
+        -ms-progress-appearance: unset !important;
+        -webkit-appearance: none !important;
+        -moz-appearance: none !important;
+        margin: 0;
+      }
+    }
+    input[type=radio]{
+      position: absolute;
+      visibility: hidden;
+
+      &:checked ~ .check {
+        border: 2px solid $color-blue;
+      }
+
+      &:checked ~ .check::before{
+        background: $color-blue;
+      }
+
+      &:checked ~ label {
+        color: $color-blue;
+        font-weight: bold;
+      }
+    }
+    label {
+      -webkit-transition: all 0.25s linear;
+      cursor: pointer;
+      display: block;
+      height: 25px;
+      line-height: 25px;
+      padding-left: 22px;
+      position: relative;
+      z-index: 9;
+      color: $color-text-box;
+    }
+    .check {
+      display: block;
+      position: absolute;
+      border: 2px solid $color-text-box;
+      border-radius: 100%;
+      height: 15px;
+      width: 15px;
+      top: 5px;
+      left: 0;
+      z-index: 5;
+      transition: border .25s linear;
+      -webkit-transition: border .25s linear;
+
+      &::before {
+        display: block;
+        position: absolute;
+        content: '';
+        border-radius: 100%;
+        height: 7px;
+        width: 7px;
+        top: 2px;
+        left: 2px;
+        margin: auto;
+        transition: background 0.25s linear;
+        -webkit-transition: background 0.25s linear;
+      }
+    }
+  }
+  &:hover .check {
+    border: 2px solid $color-text-box-hover;
   }
 }
