--- a/resources/assets/sass/global/global.scss
+++ b/resources/assets/sass/global/global.scss
@@ -20,29 +20,35 @@
 /* Personalise Popup */
 .sweet-alert.caspt {
   font-family: $font-sans;
-  //padding: 15px;
-  //padding-top: 55px;
-  //text-align: right;
-  //border-radius: 6px;
-  //box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.11), 0px 6px 30px rgba(0, 0, 0, 0.14);
-
+  width: 400px;
   .sa-icon {
-    position: absolute;
-    top: calc(50% - 40px);
-    margin: 0;
+    margin: 0 auto;
   }
-  h2, p, fieldset {
-    margin: 0 0 0 100px;
+  h2 {
+    font-size: 24px;
+    margin: 10px 0;
   }
-  .sa-error-container, .sa-button-container {
-    text-align: right;
-    margin: 0 0 0 100px;
+  p {
+    font-size: 14px;
   }
-
+  input {
+    font-size: 14px;
+    height: 30px;
+    line-height: 30px;
+  }
+  button {
+    margin-top: 5px;
+  }
   button.confirm {
     background-color: $color-green !important;
     &:hover {
       background-color: $color-green !important;
+    }
+  }
+
+  &.email {
+    input {
+      text-align: center;
     }
   }
 }
