ref #99: Fix desalinhamento de Menu.

--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -1238,7 +1238,7 @@
 }
 .bs-wp .navbar-default .navbar-nav {
   display: inline-block;
-  float: none;
+  float: left;
   vertical-align: top;
 }
 
