--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -187,7 +187,7 @@ nav {
   }
   .navbar-nav {
     display: inline-block;
-    float: none;
+    float: left;
     vertical-align: top;
 
     .active {
