ref #99: Reorganizado os Css.

--- a/resources/assets/sass/breadcrumb/breadcrumb.scss
+++ b/resources/assets/sass/breadcrumb/breadcrumb.scss
@@ -1,5 +1,7 @@
+@import '../global/variables';
+
 .breadcrumb {
-    @extend .font-title;
+    font-family: $font-exo;
     font-size: 18px;
     color: #99ccff;
     height: 40px;
