--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -1,80 +1,3 @@
-.noselect {
-  -webkit-touch-callout: none;
-  /* iOS Safari */
-  -webkit-user-select: none;
-  /* Chrome/Safari/Opera */
-  /* Konqueror */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* Internet Explorer/Edge */
-  user-select: none; }
-
-.font-title, .breadcrumb, .info .content h1, .sportsMenu .sport, .fixtures .header .game, .fixtures .header .live, .fixtures .header .selection, .fixtures-more, .markets .header, .markets .title, .markets .markets-more, .menuLive .sport, .sportsMenu-interval .header {
-  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif; }
-
-.font-text, .info .links, .info .content, .info .content h2, .info .content h3, .info .content h4, .info .content p, .sportsMenu .region, .sportsMenu .fixture, .markets table.singleRow2Cols, .markets table.singleRow3Cols, .markets table.multiRow2Cols, .markets table.multiRow3Cols, .markets table.multiRow3ColsUnlabeled, .menuLive .region, .menuLive table, .sportsMenu-interval .content {
-  font-family: "Open Sans", "Droid Sans", sans-serif; }
-
-/* Personalise Popup */
-.sweet-alert.caspt {
-  font-family: "Open Sans", "Droid Sans", sans-serif;
-  width: 400px; }
-  .sweet-alert.caspt .sa-icon {
-    margin: 0 auto; }
-  .sweet-alert.caspt h2 {
-    font-size: 24px;
-    margin: 10px 0; }
-  .sweet-alert.caspt p {
-    font-size: 14px; }
-  .sweet-alert.caspt input {
-    font-size: 14px;
-    height: 30px;
-    line-height: 30px; }
-  .sweet-alert.caspt button {
-    margin-top: 5px; }
-  .sweet-alert.caspt button.confirm {
-    background-color: #71aa30 !important; }
-    .sweet-alert.caspt button.confirm:hover {
-      background-color: #71aa30 !important; }
-  .sweet-alert.caspt.email input {
-    text-align: center; }
-
-.popup-alert .modal-dialog {
-  width: 440px;
-  margin: 10px auto;
-  top: 300px; }
-
-.popup-alert .modal-body {
-  font-family: "Open Sans", "Droid Sans", sans-serif;
-  font-size: 14px;
-  min-height: 80px;
-  color: #9a9a9a; }
-  .popup-alert .modal-body .icon {
-    float: left;
-    width: 25%; }
-  .popup-alert .modal-body .msg {
-    float: left;
-    width: 75%;
-    margin-bottom: 20px; }
-
-.popup-alert .modal-footer {
-  border-top: none; }
-  .popup-alert .modal-footer button {
-    font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
-    font-weight: bold;
-    font-size: 15px;
-    color: #FFF;
-    float: right;
-    margin: 0 5px;
-    background: #71aa30;
-    height: 40px;
-    border: none;
-    border-radius: 6px;
-    width: 110px; }
-    .popup-alert .modal-footer button:hover {
-      background: #8bca43; }
-
 .blocker {
   position: fixed;
   top: 0;
@@ -370,6 +293,7 @@
     margin-left: 45px; } }
 
 .breadcrumb {
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   font-size: 18px;
   color: #99ccff;
   height: 40px;
@@ -400,6 +324,7 @@
       line-height: 45px; }
   .info .links {
     padding: 0 20px;
+    font-family: "Open Sans", "Droid Sans", sans-serif;
     font-size: 12px; }
     .info .links .links-content {
       border-bottom: 1px solid #2d415c;
@@ -422,6 +347,7 @@
         .info .links .links-content .link.selected {
           font-weight: bold; }
   .info .content {
+    font-family: "Open Sans", "Droid Sans", sans-serif;
     font-size: 12px;
     color: #000;
     padding: 20px;
@@ -429,18 +355,23 @@
     .info .content a {
       color: #3399ff; }
     .info .content h1 {
+      font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
       font-size: 18px; }
     .info .content h2 {
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       font-size: 18px;
       color: #ff9900; }
     .info .content h3 {
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       font-size: 14px;
       color: #ff9900; }
     .info .content h4 {
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       font-weight: bold;
       font-size: 12px;
       color: #000; }
     .info .content p {
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       font-size: 12px;
       padding: 5px 10px; }
     .info .content table {
@@ -520,6 +451,7 @@
     border: 0; }
 
 .sportsMenu .sport {
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   font-size: 18px;
   line-height: 39px;
   background-color: #1e293e;
@@ -543,6 +475,7 @@
   color: #1e293e; }
 
 .sportsMenu .region {
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px;
   background-color: #2d415c;
   padding: 0 15px;
@@ -583,6 +516,7 @@
   color: #101928; }
 
 .sportsMenu .fixture {
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   display: table;
   font-size: 14px;
   min-height: 35px;
@@ -641,6 +575,7 @@
         margin-left: 15px;
         font-size: 18px; }
     .fixtures .header .game {
+      font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
       font-size: 18px;
       font-weight: normal;
       text-align: left;
@@ -648,6 +583,7 @@
       .fixtures .header .game span {
         margin-left: -15px; }
     .fixtures .header .live {
+      font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
       font-size: 14px;
       background-color: #ff3300; }
     .fixtures .header .favorite {
@@ -661,6 +597,7 @@
       width: 1px;
       background-color: #2d415c; }
     .fixtures .header .selection {
+      font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
       font-weight: normal;
       color: #99ccff;
       background-color: #2d415c;
@@ -719,6 +656,7 @@
       background-color: #435772; }
 
 .fixtures-more {
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   font-size: 16px;
   line-height: 42px;
   background-color: #1e293e;
@@ -738,7 +676,6 @@
   color: #fff;
   width: 310px;
   text-align: center;
-  margin-top: 8px;
   word-break: break-all; }
   .betslip .tab {
     font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
@@ -757,6 +694,10 @@
       line-height: 38px;
       font-weight: bold;
       color: #497d92; }
+      .betslip > .header .tab:nth-child(1) {
+        border-top-left-radius: 6px; }
+      .betslip > .header .tab:nth-child(2) {
+        border-top-right-radius: 6px; }
       .betslip > .header .tab.selected {
         color: #FFF;
         background: #ff3300; }
@@ -927,6 +868,7 @@
     color: #ffcc00; }
 
 .markets .header {
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   background-color: #1e293e;
   line-height: 42px;
   border-radius: 5px 5px 0 0;
@@ -941,6 +883,7 @@
     font-size: 14px; }
 
 .markets .title {
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   font-size: 16px;
   line-height: 42px;
   margin-top: 5px;
@@ -965,6 +908,7 @@
   text-align: center;
   border: 1px solid #4a7fb3;
   border-radius: 0;
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
   .markets table.singleRow2Cols .header {
     height: 25px;
@@ -997,6 +941,7 @@
   text-align: center;
   border: 1px solid #4a7fb3;
   border-radius: 0;
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
   .markets table.singleRow3Cols .header {
     height: 25px;
@@ -1029,6 +974,7 @@
   text-align: center;
   border: 1px solid #4a7fb3;
   border-radius: 0;
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
   .markets table.multiRow2Cols .header {
     height: 25px;
@@ -1061,6 +1007,7 @@
   text-align: center;
   border: 1px solid #4a7fb3;
   border-radius: 0;
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
   .markets table.multiRow3Cols .header {
     height: 25px;
@@ -1102,6 +1049,7 @@
   text-align: center;
   border: 1px solid #4a7fb3;
   border-radius: 0;
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
   .markets table.multiRow3ColsUnlabeled .selection {
     width: 212px; }
@@ -1131,6 +1079,7 @@
       background-color: #1e293e; }
 
 .markets .markets-more {
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   font-size: 16px;
   line-height: 42px;
   background-color: #1e293e;
@@ -1147,6 +1096,7 @@
   border-radius: 0 5px 0 0; }
 
 .menuLive .sport {
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   font-size: 18px;
   line-height: 40px;
   background-color: #1e293e;
@@ -1164,6 +1114,7 @@
       color: #ff9900; }
 
 .menuLive .region {
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px;
   background-color: #2d415c;
   padding: 0 15px;
@@ -1179,6 +1130,7 @@
     color: #ff9900; }
 
 .menuLive table {
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px;
   min-height: 35px;
   background-color: #1e293e;
@@ -1205,8 +1157,7 @@
 .sportsMenu-container {
   float: left;
   width: 230px;
-  min-height: 500px;
-  margin-top: 8px; }
+  min-height: 500px; }
 
 .sportsMenu-container ul {
   list-style: none;
@@ -1216,6 +1167,10 @@
 .sportsMenu-box.header {
   height: 46px;
   margin-bottom: 8px; }
+  .sportsMenu-box.header button:nth-child(1) {
+    border-top-left-radius: 6px; }
+  .sportsMenu-box.header button:nth-child(2) {
+    border-top-right-radius: 6px; }
 
 .sportsMenu-tab {
   float: left;
@@ -1237,6 +1192,7 @@
   color: #FFF; }
 
 .sportsMenu-interval .header {
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   font-size: 18px;
   background-color: #1e293e;
   padding: 0 15px;
@@ -1254,6 +1210,7 @@
       font-size: 18px; }
 
 .sportsMenu-interval .content {
+  font-family: "Open Sans", "Droid Sans", sans-serif;
   background-color: #2d415c;
   font-size: 14px;
   overflow: auto;
