--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -3,7 +3,6 @@
     color: #fff;
     width: 310px;
     text-align: center;
-    margin-top: 8px;
     word-break: break-all;
 
     .tab {
@@ -26,6 +25,13 @@
             line-height: 38px;
             font-weight: bold;
             color: #497d92;
+
+            &:nth-child(1) {
+                border-top-left-radius: 6px;
+            }
+            &:nth-child(2) {
+                border-top-right-radius: 6px;
+            }
 
             &.selected {
                 color: #FFF;
